--- a/css/account.css
+++ b/css/account.css
@@ -7,22 +7,50 @@ body {
 .card-custom {
     background-color: #333333;
     border: none;
-    margin-bottom: 10px;
+    margin-bottom: 22px;
+    border-radius: 20px; /* Rounded corners */
+    overflow: hidden; /* Ensure content inside respects the border radius */
 }
 
 .card-custom .card-body {
     color: #d4af37;
     text-align: center;
+    padding: 20px; /* Add some padding inside the card */
 }
 
 .list-group-item {
     background-color: #333333;
     border: none;
     color: #d4af37;
-    margin-bottom: 10px;
+    margin-bottom: 22px;
+    display: flex;
+    align-items: center;
+    height: 75px;
+    border-radius: 20px; /* Rounded corners for list items */
+}
+
+.list-group-item i {
+    
+    margin-right: 10px; /* Adds space between icon and text */
 }
 
 .list-group-item:hover {
     background-color: #b08d57;
     color: #fff;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+    background-color: #bd9c41;
+    color: white;
+    margin-bottom: 20px; /* Adds spacing below the title */
+}
+
+.title h3 {
+    margin: 0; /* Removes default margin from the heading */
+    padding: 0; /* Ensures no extra space around the text */
 }
