--- a/css/news.css
+++ b/css/news.css
@@ -1,17 +1,33 @@
 body {
     background-color: #1a1a1a;
-    color: #d4af37;
+
     font-family: Arial, sans-serif;
-}
+} 
 
 .list-group-item {
     background-color: #333333;
     border: none;
     color: #d4af37;
-    margin-bottom: 10px;
+    margin-bottom: 22px;
+    height: 50px;
 }
 
 .list-group-item:hover {
     background-color: #b08d57;
     color: #fff;
+}
+.title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+    background-color: #bd9c41;
+    color: white;
+    margin-bottom: 20px; /* Adds spacing below the title */
+}
+
+.title h3 {
+    margin: 0; /* Removes default margin from the heading */
+    padding: 0; /* Ensures no extra space around the text */
 }
